force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Balance_in_Excess__c.field-meta.xml
<CustomField>
    <fullName>Balance_in_Excess__c</fullName>
    <formula>Total_Applied_to_Excess__c -  Total_Applied_From_Excess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance in Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>