force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/EOL_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>EOL_Notification_Date__c</fullName>
    <formula>Contract_End_Date__c - 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOL Notification Date</label>
    <type>Date</type>
</CustomField>