force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Total_Applied_From_Excess__c.field-meta.xml
<CustomField>
    <fullName>Total_Applied_From_Excess__c</fullName>
    <label>Total Applied From Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>