force-app/main/default/objects/CL_Lease_Financial_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Record_Count__c</columns>
    <columns>NAME</columns>
    <columns>Contract_Status__c</columns>
    <columns>Gross_Rent__c</columns>
    <columns>Unbilled_Rent_Streams__c</columns>
    <columns>Billed_Rent_Streams__c</columns>
    <columns>Billed_Rent_Transactions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>